<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp">

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radio"
        android:orientation="vertical">

        <RadioButton android:id="@+id/intero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intero"/>
        <RadioButton android:id="@+id/meta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meta"
            android:layout_marginTop="5dp"/>
        <RadioButton android:id="@+id/zero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:layout_marginTop="5dp"/>
        <RadioButton android:id="@+id/scelta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scegli"
            android:layout_marginTop="5dp"/>
    </RadioGroup>

    <EditText
        android:inputType="numberSigned"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/svincola"
        android:id="@+id/conferma"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"/>

</LinearLayout>