<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:id="@id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100">

        <Spinner
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/spinner"
            android:layout_weight="36"
            android:paddingEnd="8dp"
            tools:ignore="RtlSymmetry" />

        <com.live.Ordina
            android:layout_width="0dp"
            android:layout_weight="8"
            android:layout_height="wrap_content"
            android:textSize="19sp"
            android:text="@string/pg"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:gravity="center"
            android:textColor="#FFFFFF"/>

        <com.live.Ordina
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="19sp"
            android:id="@+id/enabled"
            android:text="@string/mv"
            android:layout_weight="12"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>

        <com.live.Ordina
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="19sp"
            android:text="@string/mf"
            android:layout_weight="12"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>

        <com.live.Ordina
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="19sp"
            android:text="@string/g"
            android:layout_weight="8"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>

        <com.live.Ordina
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="19sp"
            android:text="@string/as"
            android:layout_weight="8"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>

        <com.live.Ordina
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="19sp"
            android:text="@string/am"
            android:layout_weight="8"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>

        <com.live.Ordina
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="19sp"
            android:text="@string/es"
            android:layout_weight="8"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingEnd="8dp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@id/listView"/>

</LinearLayout>