<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <include layout="@layout/schiera"/>

    <RelativeLayout
        android:layout_width="275dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:choiceMode="multipleChoice">

    <ListView
        android:id="@+id/right_drawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:background="@android:color/white"/>

    <LinearLayout
        android:id="@+id/legenda"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="#E8E8E8"
        android:gravity="end"
        android:paddingTop="3dip"
        android:paddingBottom="3dip"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:visibility="gone"
        android:weightSum="10">

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/MV"
            android:text="@string/mv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="3dip"
            android:paddingBottom="3dip"
            android:textColor="#111111"
            android:textSize="15sp"
            android:layout_weight="1.5"
            android:gravity="center"/>

        <TextView
            android:text="@string/pres"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="3dip"
            android:paddingBottom="3dip"
            android:textColor="#111111"
            android:textSize="15sp"
            android:layout_weight="1.5"
            android:gravity="center"/>

        <TextView
            android:text="@string/gf_gs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="3dip"
            android:paddingBottom="3dip"
            android:textColor="#111111"
            android:textSize="15sp"
            android:layout_weight="1.8"
            android:gravity="center"/>

        <TextView
            android:text="@string/am"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="3dip"
            android:paddingBottom="3dip"
            android:textColor="#111111"
            android:textSize="15sp"
            android:layout_weight="1.2"
            android:gravity="center"/>

        <TextView
            android:text="@string/esp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="3dip"
            android:paddingBottom="3dip"
            android:textColor="#111111"
            android:textSize="15sp"
            android:layout_weight="1.2"
            android:gravity="end"/>

        <TextView
            android:text="@string/ass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="3dip"
            android:paddingBottom="3dip"
            android:textColor="#111111"
            android:textSize="15sp"
            android:layout_weight="1.8"
            android:gravity="center"/>
    </LinearLayout>

    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>