<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:id="@+id/portrait"
        android:background="#FF01AEF0">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.45"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginStart="16dp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:text="@string/squadra"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:layout_weight="0.15"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/giocate"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:layout_weight="0.15"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/pt"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:layout_weight="0.25"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginEnd="16dp"
            android:text="@string/totale"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:id="@+id/sculo"
        android:background="#FF01AEF0"
        android:visibility="gone">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.45"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginStart="16dp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:text="@string/squadra"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:layout_weight="0.15"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/pt"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:layout_weight="0.15"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/punti_prob"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:layout_weight="0.25"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginEnd="16dp"
            android:text="@string/diff"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="100"
        android:id="@+id/landscape"
        android:background="#FF01AEF0"
        android:visibility="gone">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="32.5"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginStart="16dp"
            android:text="@string/squadra"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_weight="7.5"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/giocate"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_weight="7.5"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/pt"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_weight="7.5"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/vittorie"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_weight="7.5"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/pareggi"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_weight="7.5"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/sconfitte"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_weight="7.5"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/golfatti"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_weight="7.5"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/golsubiti"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_weight="15"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginEnd="16dp"
            android:text="@string/totale"/>

    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/pre_execute"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/calcolo"/>
</LinearLayout>